--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 	and the people there were so cool.</p>
 
 
-<img src="images/h.JPG" alt=clinton flag width="400">
-<img src="images/sanders.JPG" alt=clinton flag width="400">
+<img src="images/h.JPG" alt=clinton  width="400">
+<img src="images/sanders.JPG" alt=bernie sanders width="400">
 <h2>Hobbies</h2>
 <p>I really enjoy watching Youtube. Youtube has so many genres and is a very diverse website where people can express<br>
   themselves and show others who they truly are and what they are passionate about. Some of my favorite youtubers are<br>
