--- a/atm.html
+++ b/atm.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 <title> ATM Program at Bancroft Middle School </title>
 
