--- a/atm.html
+++ b/atm.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="myStyle.css">
 	<li><a href="future.html">Future</a></li>
 				<li><a href="index.html">HomePage</a></li>
-	</head>
+	<head/>
 
 <body>
 	
@@ -44,4 +44,4 @@ together.
 
 </body>
 
-</html>
+<html/>
