--- a/future.html
+++ b/future.html
@@ -42,7 +42,7 @@
         padding: 5px;
         display: block;
       }
-</head>
+<head/>
 <title> Future </title>
 
 	<link rel="stylesheet" type="text/css" href="myStyle.css">
