--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
    all have very unique contents, especially loveliveserve. They make skits, and react to videos. <br>
   <p>
  </p>
-<img src="images/youtube.JPG" alt=youtube width="500">
+<img src="https://lh3.google.com/u/0/d/0B1lgjJN2kGmDLWhvR2hCaWRMZkU=w1281-h819-iv1" alt=youtube width="500">
 <h2>Skills</h2>
 <p>I am technologicaly advanced. You see this website, yeah well I created it with my own code! I attend to Bancroft <br>
 middle school, and in the ATM program. In this program I learn so many new techniques in computers, that will help <br>
