--- a/atm.html
+++ b/atm.html
@@ -21,7 +21,7 @@
   resume. Sixth grade did not need your creative input, but you learned the most useful programs, that you <br>
    you will use for the rest of your life. I'm not saying you did not do anything fun at all. We had the chance<br>
    to code shapes and make our own logos. It was so much fun! <br> </p>
-	<img src="images/logo.JPG" alt=logo width="200">
+	<img src="https://lh3.google.com/u/0/d/0B1lgjJN2kGmDRXljb1dSTUJLclE=w1281-h819-iv1" alt=logo width="200">
 
 <h2>Seventh Grade</h2>
 <p> Seventh grade was so much fun. This is where the magic happened. We learned a lot about photography. When I first <br>
