--- a/atm.html
+++ b/atm.html
@@ -40,7 +40,7 @@ GarageBand. That was probably my favourite thing to do. You had a clean slate to
 And I am so thankful to have classmates that are respectful and don't critisize your work since we are all learning<br>
 together. 
  </p>
-<img src="images/band.jpg" alt=garageband width="400">
+<img src="https://lh3.google.com/u/0/d/0B1lgjJN2kGmDdHFfOHM4WlNRRFk=w1281-h819-iv1" alt=garageband width="400">
 
 </body>
 
