--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
    Mikey Murphy, Loveliveserve, and the Dolan Twins. They always put a smile on my face. You should check them out! They<br>
    all have very unique contents, especially loveliveserve. They make skits, and react to videos. <br>
 	<p>
-		<target>
-	Mikey Murphy:  <a href=" https://www.youtube.com/user/MikeIsAverage"> </a>
-	Loveliveserve: <a href=" https://www.youtube.com/user/loveliveserve"> </a>
-			Dolan Twins: <a href="https://www.youtube.com/user/TheDolanTwins"> </a>
-  <target/>
+	
+	Mikey Murphy:  <a href=" https://www.youtube.com/user/MikeIsAverage"> </a> <br>
+	Loveliveserve: <a href=" https://www.youtube.com/user/loveliveserve"> </a> <br>
+	Dolan Twins: <a href="https://www.youtube.com/user/TheDolanTwins"> </a> <br>
+
  <p/>
 <img src="https://lh3.google.com/u/0/d/0B1lgjJN2kGmDLWhvR2hCaWRMZkU=w1281-h819-iv1" alt=youtube width="500">
 <h2>Skills</h2>
