--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
    all have very unique contents, especially loveliveserve. They make skits, and react to videos. <br>
 	<p>
 	
-	Mikey Murphy:  <a href=" https://www.youtube.com/user/MikeIsAverage"> </a> <br>
-	Loveliveserve: <a href=" https://www.youtube.com/user/loveliveserve"> </a> <br>
-	Dolan Twins: <a href="https://www.youtube.com/user/TheDolanTwins"> </a> <br>
+	 <ul>
+            <li><a href="https://www.youtube.com/results?search_query=dolan+twins">Dolan Twins </a></li>
+		 <ul/>
 
  <p/>
 <img src="https://lh3.google.com/u/0/d/0B1lgjJN2kGmDLWhvR2hCaWRMZkU=w1281-h819-iv1" alt=youtube width="500">
@@ -64,6 +64,6 @@ help me later on in life. Not only am I good with computers, I play soccer. I pl
 </p>
 <img src="images/soccer.jpg" alt=soccer ball  width="400">
 
-</body>
+<body/>
 
-</html>
+<html/>
