--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 	 <ul>
             <li><a href="https://www.youtube.com/results?search_query=dolan+twins">Dolan Twins </a></li>
 		 
-            <li><a href="https://www.youtube.com/user/MikeIsAverage">Murphy </a></li>
-	 <li><a href="https://www.youtube.com/user/loveliveserve">serve </a></li>
+            <li><a href="https://www.youtube.com/user/MikeIsAverage"> Mikey Murphy </a></li>
+	 <li><a href="https://www.youtube.com/user/loveliveserve">Loveliveserve </a></li>
 		 <ul/>
 
  <p/>
