--- a/future.html
+++ b/future.html
@@ -1,18 +1,26 @@
 <!doctype html>
 <html>
 <head>
-	<link href="/normalize.css" rel="stylesheet">
-  
-<head/>
-<title> Future </title>
-
 	<link rel="stylesheet" type="text/css" href="myStyle.css">
+  
+</head>
+<title> Future </title>
+	
+	<head/> 
+<body>
+	<header>
+		<img src="Image Source">
+		<ul>
+			
+
 	             <li><a href="atm.html">ATM</a></li>
 				<li><a href="index.html">HomePage</a></li>
+			<ul/>
+			<header/>
 	
-	</head>
 
-<body>
+
+<body/>
 
 		
 <h1>My Future</h1>
