--- a/future.html
+++ b/future.html
@@ -13,8 +13,8 @@
 		<ul>
 			
 
-	             <li><a href="atm.html">ATM</a></li>
-				<li><a href="index.html">HomePage</a></li>
+	             <li><a href="future.html">Future</a></li>
+		     <li><a href="index.html">HomePage</a></li>
 			<ul/>
 			<header/>
 	
