--- a/future.html
+++ b/future.html
@@ -47,8 +47,8 @@ Another thing that I am considering right now is being a probation officer. I wo
 need a little more support getting their life back in order. It is not fair to see someone for who they were in the past but focus<br>
 on what will happen in the future. 
  </p>
-<img src="images/fingerprint.JPG" alt=officer width="100">
+<img src="https://lh3.google.com/u/0/d/0B1lgjJN2kGmDS21neTFDTFlma2s=w1459-h942-iv1" alt=officer width="100">
 
-</body>
+<body/>
 
-</html>
+<html/>
