--- a/atm.html
+++ b/atm.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
-<head>
+<header>
 	<link rel="stylesheet" type="text/css" href="mystyle.css">
-</head>
+</header>
 <title> ATM Program at Bancroft Middle School </title>
 
 	<link rel="stylesheet" type="text/css" href="myStyle.css">
