--- a/future.html
+++ b/future.html
@@ -1,22 +1,17 @@
 <!doctype html>
 <html>
-<head>
+<header>
 	<link rel="stylesheet" type="text/css" href="myStyle.css">
   
-</head>
 <title> Future </title>
-	
-	<head/> 
 <body>
-	<header>
+	
 		<img src="Image Source">
 		<ul>
-			
-
-	             <li><a href="future.html">Future</a></li>
-		     <li><a href="index.html">HomePage</a></li>
+		<li><a href="future.html">Future</a></li>
+		<li><a href="index.html">HomePage</a></li>
 			<ul/>
-			<header/>
+			</header>
 	
 
 
