--- a/index.html
+++ b/index.html
@@ -1,68 +1,79 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
 <head>
-	
-	<link rel="stylesheet" type="text/css" href="mystyle.css">
+  <link href="/normalize.css" rel="stylesheet">
+  <style>
+    header {
+      text-align: center;
+      background: url('https://lh3.google.com/u/0/d/0B1lgjJN2kGmDNG5PYVNTbEp4MEE=w1290-h837-iv1');
+      background-size: cover;
+      color: white;
+    }
+    a {
+      color: white;
+    }
+    h1 {
+      font-size: 70px;
+    }
+    img {
+      margin: 40px 0px 0px 0px;
+      border: 7px solid white;
+      border-radius: 20px;
+    }
+    ul {
+      padding: 10px;
+      background: rgba(0,0,0,0.5);
+    }
+    li {
+      display: inline;
+      padding: 0px 10px 0px 10px;
+    }
+    article {
+      max-width: 500px;
+      padding: 20px;
+      margin: 0 auto;
+    }
+    @media (max-width: 500px) {
+      h1 {
+        font-size: 36px;
+        padding: 5px;
+      }
+      li {
+        padding: 5px;
+        display: block;
+      }
+    }
+  </style>
 </head>
-<title> About Jocelyn </title>
-
-	
-	
-	<head/>
-        <body>
-	<header>
-		<img src="ImageSource">
-		
-			<ul>
-				<li><a href="atm.html">ATM</a></li>
-				<li><a href="future.html">Future</a></li>
-				
-				</ul>
-				</header>
-<h1>About Jocelyn!</h1>
-<h2>Family</h2> <br>
-<p> I come from a single parent home. My mom and dad divorced when I was a baby.<br>
-	Patty,my mother later married Pablo. They had a daughter together named<br>
-	Olivia. Olivia and I have become so close over the past two years. We are inseaparable!<br>
-	Other than my immediate family, I have so many cousins. On my moms side she has nine<br>
-	sisters and just one brother. All of them combined have twenty-one kids.<br>
-	We were all raised super close, just like brothers and sister. We can<br>
-	trust eachother with everything. They are all my bestfriends. <br> </p>
-	<img src="images/bumz.JPG" alt=me ariana alondra width="300">
-    <img src="images/me.JPG" alt=sister width="300">
-<h2>Interests</h2>
-<p> I am really interested in politics. Politics is perfect for debates and taking a stand for <br>
-    what you believe is right. It changes your view on things when thinking about all people around you,<br>
-    and you no longer think about yourself but consider those around you and what's fair to all of you. <br>
-	Since I was tiny all I can remember is my aunts and uncles talking about politics. They are all democrats<br>
-	and so am I. I had the oppurtunity to go to Hillary Clinton's presidential rally in Long Beach. I shook her<br>
-	hand!!! I also was able to go to Bernie Sanders rally at the Stub Hub center. That rally was so much fun<br>
-	and the people there were so cool.</p>
-
-
-<img src="images/h.JPG" alt=clinton  width="400">
-<img src="https://lh3.google.com/u/0/d/0B1lgjJN2kGmDT0lpWV8tSVk0Vjg=w1459-h942-iv1" width="400">
-<h2>Hobbies</h2>
-<p>I really enjoy watching Youtube. Youtube has so many genres and is a very diverse website where people can express<br>
-  themselves and show others who they truly are and what they are passionate about. Some of my favorite youtubers are<br>
-   Mikey Murphy, Loveliveserve, and the Dolan Twins. They always put a smile on my face. You should check them out! They<br>
-   all have very unique contents, especially loveliveserve. They make skits, and react to videos. <br>
-	<p>
-	
-
-<img src="https://lh3.google.com/u/0/d/0B1lgjJN2kGmDLWhvR2hCaWRMZkU=w1281-h819-iv1" alt=youtube width="500">
-<h2>Skills</h2>
-<p>I am technologicaly advanced. You see this website, yeah well I created it with my own code! I attend to Bancroft <br>
-middle school, and in the ATM program. In this program I learn so many new techniques in computers, that will help <br>
-help me later on in life. Not only am I good with computers, I play soccer. I play for a club called FC Long Beach.<br>
- I have played with the same team for over 4 years. All of those girls are like family to me. We root eachother on the <br>
- sidelines and in our lifes. I also branched out of my club team, and played for Bancroft Middle School. We made it to semi-finals but<br>
- sadly we did not make it past that. 
-</p>
-<img src="images/soccer.jpg" alt=soccer ball  width="400">
-
-<body/>
-
-<html/>
-
+<body>
+  <header>
+    <img src="https://lh3.google.com/u/0/d/0B1lgjJN2kGmDLWtOamplYnRIdFE=w1692-h876-iv1"width=300>
+    <h1>Jocelyn</h1>
+    <ul>
+      <li><a href="#">About Me</a></li>
+      <li><a href="#">ATM Program</a></li>
+      <li><a href="#">My Future</a></li>
+    </ul>
+  </header>
+  <article>
+    <h2>Photography</h2>
+    <p>During the photography unit my peers and I got the chance to learn so many new tips and tricks when taking photos. Students in the ATM program now know the basics such as rule of thirds, differnent shots and even lighting. It's important to know theese skills since pictures are such an imp</p>
+    <button>Like</button>
+  </article>
+  <article>
+    <h2>FloorPlan</h2>
+    <p>Floor Plan was so much fun. You were able to bring a flat rectangle with mini squares inside of it to homes with rooms and bathrooms.You brought the home to life in a click of a button. This not only was fun but it was a skill I'll keep sacred forever. </p>
+    <button>Like</button>
+  </article>
+  <article>
+    <h2>SketchUp</h2>
+    <p>SketchUp was actually really fun!We were able to design our own mueseums and make it to our liking. Yes, I struggled with all the demensions and lacked the organization that everyone else seemed to do just fine with. But it was a skill that is important now and will most likely use later down the road.  </p>
+    </img>
+    <button>Like</button>
+  </article>
+  <script>
+    $("button").on("click", function() {
+      alert("Clicked!");
+    });
+  </script>
+</body>
 
